--- a/src/App.css
+++ b/src/App.css
@@ -4,18 +4,23 @@
   box-sizing: border-box;
 }
 
-body {
-  width: 100%;
-  height: 100vh;
+body,
+html {
   font-family: 'Rubik', sans-serif;
 }
 
 .App {
   width: 100%;
-  height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.title-container {
+  text-align: center;
+  color: #36454F;
+  margin: 30px 0px 20px 0px;
 }
 
 .shopping-list-container {
@@ -24,4 +29,6 @@ body {
   width: 500px;
   max-width: 90%;
   min-height: 400px;
+  margin-bottom: 50px;
+  padding-bottom: 25px;
 }
