--- a/src/stylesheets/Item.css
+++ b/src/stylesheets/Item.css
@@ -5,6 +5,15 @@
   margin-bottom: 15px;
   padding: 8px 12px;
   width: 85%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.list-item-container.done {
+  background-color: #E55451;  
+  color: #fff;
+  text-decoration: line-through;
 }
 
 .item-title {
@@ -19,4 +28,11 @@
 
 .item-priority span {
   font-weight: 400;
+}
+
+.icon {
+  height: 30px;
+  width: 22px;
+  cursor: pointer;
+  margin-right: 8px;
 }
