--- a/src/stylesheets/Form.css
+++ b/src/stylesheets/Form.css
@@ -43,3 +43,9 @@ label {
   font-size: 16px;
   border-radius: 0px 5px 5px 0px;
 }
+
+.error-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
